--- a/japanese/word.html
+++ b/japanese/word.html
@@ -57,6 +57,7 @@
 	  margin-left: 10%;
 	}
 	table {
+	  margin-right: 10%;
 	  border: 2px solid black;
 	  margin-bottom: 5%;
 	}
@@ -66,17 +67,13 @@
 	  padding: 10px;
 	  height: 5%;
 	}
-	td:nth-child(2n+1) {
+	td:nth-child(odd) {
 	  width: 10%;
 	}
-	td:nth-child(2n) {
+	td:nth-child(even) {
 	  font-size: 1em;
 	  width: 5%;
 	  text-align: center;
-	  color: white;
-	}
-	:hover td:nth-child(2n) {
-	  background-color: black;
 	}
 		
 	#footer {
