--- a/japanese/word.html
+++ b/japanese/word.html
@@ -61,19 +61,19 @@
 	  border: 2px solid black;
 	  margin-bottom: 5%;
 	}
-	td {
+	tr td {
 	  border: 1px solid black;
-	  font-size: 2em;
+	  width: 10%;
+	  text-align: center;
 	  padding: 10px;
 	  height: 5%;
 	}
-	td:nth-child(odd) {
-	  width: 10%;
+	.table tr:nth-child(2n-1) {
+	  font-size: 1.5em;
 	}
-	td:nth-child(even) {
+	.table tr:nth-child(2n) {
 	  font-size: 1em;
-	  width: 5%;
-	  text-align: center;
+	  color: white;
 	}
 	table :nth-child(2n) :hover {
 	  color: red;
@@ -122,7 +122,7 @@
 	<section id="main">
 	  <p>단어장</p>
 	  <div class="main">
-		<table>
+		<table class="table">
 		  <tr>
 			<td>合う</td><td>あとで</td><td>1回</td><td>美味い</td><td>青い</td><td>危ない</td><td>5日</td><td>生まれる</td><td>赤い</td><td>甘い</td>
 		  </tr>
