--- a/codelink/ruby.html
+++ b/codelink/ruby.html
@@ -122,19 +122,23 @@
 		  <a href="ruby2.html">RoR 기초</a>
 		</div>
 		<div class="object">
-		  <a href="ruby3.html">MVC</a>
+		  <a href="ruby3.html">RoR 문법1</a>
+
 		</div>
 		<div class="object">
-		  <a href="ruby4.html">RoR 문법1</a>
+		  <a href="ruby4.html">RoR 문법2</a>
 		</div>
 		<div class="object">
-		  <a href="ruby5.html">RoR 문법2</a>
+		  <a href="ruby5.html">MVC</a>
 		</div>
 		<div class="object">
-		  <a href="ruby6.html">RoR 예제</a>
+		  <a href="ruby6.html">CRUD</a>
 		</div>
 		<div class="object">
-		  <a href="ruby7.html">Ruby Gems</a>
+		  <a href="ruby7.html">RoR 예제</a>
+		</div>
+		<div class="object">
+		  <a href="ruby8.html">Ruby Gems</a>
 		</div>
 	  </div>
 	</section>
