--- a/japanese/word.html
+++ b/japanese/word.html
@@ -75,7 +75,7 @@
 	  font-size: 1em;
 	  color: white;
 	}
-	table :nth-child(2n) :hover {
+	.table tr :nth-child(2n) :hover {
 	  color: red;
 	}
 		
