--- a/codelink/ruby6.html
+++ b/codelink/ruby6.html
@@ -10,7 +10,7 @@
 	  height: 100%;
 	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	}
-	a:link {
+	a:link{
 	  color: white;
 	  text-decoration: none;
 	}
@@ -18,7 +18,7 @@
 	  color: white;
 	  text-decoration: none;
 	}
-	a:hover {
+	.nav a:hover {
 	  text-decoration: underline;
 	}
 	.header {
@@ -44,11 +44,11 @@
 	}
 	#main {
 	  width: 100%;
-	  height: 70%;
+	  height: auto;
+	  margin-bottom: 5%;
 	}
 	.main {
 	  width: 80%;
-	  height: 60%;
 	  margin-left: 15%;
 	}
 	#main p {
@@ -107,35 +107,16 @@
 		  <a href="java.html">JAVA&nbsp;&nbsp;</a>
 		  <a href="html.html">HTML & CSS</a>
 		</nav>
-		<h1><strong>Ruby on Rails</strong></h1>
+		<a href="ruby.html"><h1><strong>Ruby on Rails</strong></h1></a>
 	  </div>
 	</header>
 	
 	<!-- main section -->
 	<section id="main">
-	  <p>목록</p>
+	  <p>CRUD</p>
 	  <div class="main">
-		<div class="object">
-		  <a href="ruby1.html">RoR 입문</a>
-		</div>
-		<div class="object">
-		  <a href="ruby2.html">RoR 기초</a>
-		</div>
-		<div class="object">
-		  <a href="ruby3.html">MVC</a>
-		</div>
-		<div class="object">
-		  <a href="ruby4.html">RoR 문법1</a>
-		</div>
-		<div class="object">
-		  <a href="ruby5.html">RoR 문법2</a>
-		</div>
-		<div class="object">
-		  <a href="ruby6.html">RoR 예제</a>
-		</div>
-		<div class="object">
-		  <a href="ruby7.html">Ruby Gems</a>
-		</div>
+		<h2>CRUD란 Creat  Read  Update  Delete를 일컫는 말로<br><br>소프트웨어의 기본적인 데이터 처리 기능들이다<br><h2>
+		<img src="../public/crud.png" width="65%">	
 	  </div>
 	</section>
 
