--- a/codelink/ruby.html
+++ b/codelink/ruby.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title> C++ </title>
+	<title> Ruby on Rails </title>
 	<style>
 	html, body {
 	  margin: 0px;
