--- a/codelink/ruby5.html
+++ b/codelink/ruby5.html
@@ -57,21 +57,6 @@
 	  vertical-align: middle;
 	  margin-left: 10%;
 	}
-	.object {
-	  float: left;
-	  width: 200px;
-	  height: 150px;
-	  text-align: center;
-	  vertical-align: middle;
-	}
-	.object a:link {
-	  color: black;
-	  text-decoration: none;
-	}
-	.object a:visited {
-	  color: black;
-	  text-decoration: none;
-	}
 	#footer {
 	  width: 100%;
 	}
@@ -115,8 +100,8 @@
 	<section id="main">
 	  <p>MVC</p>
 	  <div class="main">
-		<h2>CRUD란 Creat  Read  Update  Delete를 일컫는 말로<br><br>소프트웨어의 기본적인 데이터 처리 기능들이다<br><h2>
-		<img src="../public/crud.png" width="65%">	
+		<h2>MVC란 Model  View  Controller를 일컫는 말로<br><br>소프트웨어의 디자인 패턴이다.<br><h2>
+		<img src="../public/mvc.png" width="65%">	
 	  </div>
 	</section>
 
