--- a/codelink/ruby6.html
+++ b/codelink/ruby6.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title> C++ </title>
+	<title> RoR_CRUD </title>
 	<style>
 	html, body {
 	  margin: 0px;
@@ -56,21 +56,6 @@
 	  text-align: left;
 	  vertical-align: middle;
 	  margin-left: 10%;
-	}
-	.object {
-	  float: left;
-	  width: 200px;
-	  height: 150px;
-	  text-align: center;
-	  vertical-align: middle;
-	}
-	.object a:link {
-	  color: black;
-	  text-decoration: none;
-	}
-	.object a:visited {
-	  color: black;
-	  text-decoration: none;
 	}
 	#footer {
 	  width: 100%;
