--- a/japanese/video.html
+++ b/japanese/video.html
@@ -44,12 +44,8 @@
 	}
 	#main {
 	  width: 100%;
-	  height: 70%;
-	}
-	.main {
-	  width: 80%;
-	  height: 60%;
-	  margin-left: 15%;
+	  height: 150%;
+	  margin-bottom: 15%;
 	}
 	#main p {
 	  font-size: 3em;
@@ -57,7 +53,27 @@
 	  vertical-align: middle;
 	  margin-left: 10%;
 	}
-
+	.movie {
+	  width: 80%;
+	  height: auto;
+	  margin-left: 15%;
+	  margin-right: 15%;
+	  margin-bottom: 5%;
+	}
+	.object {
+	  float: left;
+	  width: 25%;
+	  text-align: center;
+	}
+	.object img {
+	  width: 90%;
+	  height: auto;
+	  border-radius: 5px;
+	  margin: 0 auto;
+	}
+	.object h3 {
+	  height: 1em;
+	}
 		
 	#footer {
 	  width: 100%;
@@ -100,9 +116,23 @@
 	
 	<!-- main section -->
 	<section id="main">
-	  <p>목록</p>
-	  <div class="main">
-
+	  <p>영화</p>
+	  <div class="movie">
+		<div class="object">
+		  <img src="../public/angel.jpg"><br><br><h3>天子の　恋</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/date.jpg"><br><br><h3>僕は明日、昨日の君と　デートする</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/oneweek.jpg"><br><br><h3>一週間　フレンズ</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/wanna.jpg"><br><br><h3>君の　膵臓を　食べたい</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/chihaya.jpg"><br><br><h3>ちはやふる</h3>
+		</div>
 	  </div>
 	</section>
 
