--- a/japanese/video.html
+++ b/japanese/video.html
@@ -134,6 +134,26 @@
 		  <img src="../public/chihaya.jpg"><br><br><h3>ちはやふる</h3>
 		</div>
 	  </div>
+		
+		
+	   <p>영화</p>
+	  <div class="movie">
+		<div class="object">
+		  <img src="../public/angel.jpg"><br><br><h3>天子の　恋</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/date.jpg"><br><br><h3>僕は明日、昨日の君と　デートする</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/oneweek.jpg"><br><br><h3>一週間　フレンズ</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/wanna.jpg"><br><br><h3>君の　膵臓を　食べたい</h3>
+		</div>
+		<div class="object">
+		  <img src="../public/chihaya.jpg"><br><br><h3>ちはやふる</h3>
+		</div>
+	  </div>
 	</section>
 
     <!-- Footer -->
