--- a/japanese/video.html
+++ b/japanese/video.html
@@ -54,13 +54,13 @@
 	}
 	.movie {
 	  width: 80%;
-	  overflow: hidden;
+	  overflow: auto;
 	  height: auto;
 	  margin: 0% 15% 5% 10%;
 	}
 	.drama {
 	  width: 80%;
-	  overflow: hidden;
+	  overflow: auto;
 	  height: auto;
 	  margin: 0% 15% 5% 10%;
 	}
