헤더 링크수정

--- a/japanese/video.html
+++ b/japanese/video.html
@@ -115,7 +115,7 @@
 		  <a href="word.html">단어장&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		<h1><strong>영화</strong></h1>
+		  <a href="jlpt.html"><h1><strong>영화</strong></h1></a>
 	  </div>
 	</header>
 	
