헤더 링크수정

--- a/japanese/word.html
+++ b/japanese/word.html
@@ -114,7 +114,7 @@
 		  <a href="video.html">영화&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		<h1><strong>단어장</strong></h1>
+		  <a href="jlpt.html"><h1><strong>단어장</strong></h1></a>
 	  </div>
 	</header>
 	
