--- a/japanese/word.html
+++ b/japanese/word.html
@@ -19,7 +19,7 @@
 	  text-decoration: none;
 	}
 	a:hover {
-	  text-decoration: underline;
+	  text-decoration: none;
 	}
 	.header {
 	  margin: 0px;
@@ -114,7 +114,7 @@
 		  <a href="video.html">영화&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		  <a href="jlpt.html"><h1><strong>단어장</strong></h1></a>
+		  <a href="jlpt.html"><h1><strong>단어장</a></strong></h1>
 	  </div>
 	</header>
 	
