--- a/japanese/video.html
+++ b/japanese/video.html
@@ -19,7 +19,7 @@
 	  text-decoration: none;
 	}
 	a:hover {
-	  text-decoration: underline;
+	  text-decoration: none;
 	}
 	.header {
 	  margin: 0px;
@@ -115,7 +115,7 @@
 		  <a href="word.html">단어장&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		  <a href="jlpt.html"><h1><strong>영화</strong></h1></a>
+		  <a href="jlpt.html"><h1><strong>영화</a></strong></h1>
 	  </div>
 	</header>
 	
