--- a/index.html
+++ b/index.html
@@ -3,214 +3,11 @@
   <head>
 	<meta charset="utf-8">
 	<title>최규진's 홈페이지</title>
-	<style>
-	  html, body {
-		margin: 0px;
-		width:100%;
-		height: 100%;
-		font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	  }
-	  p {
-		font-size: 3em;
-		text-align: center;
-		vertical-align:middle;
-		margin: 0;
-	  }
-
-	  .header {
-		margin: 0px;
-		display: table;
-		background-size: 100%;
-		width: 100%;
-		background-image: url("public/bg.jpg");
-		background-position: center center;
-		background-repeat: no-repeat;
-		height: 100%;
-	  }
-	  .text-vertical-center {
-		display: table-cell;
-		text-align: center;
-		vertical-align: middle;
-		padding-left: 40%;
-		padding-bottom: 5%;
-
-	  }
-	  .text-vertical-center h1 {
-		margin: 0;
-		padding: 0;
-		font-size: 4.5em;
-		font-weight: 700;
-	  }
-	  .headerbutton {
-		border-radius: 0;
-		color: #fff;
-		background-color: rgba(0, 0, 0, 0.4);
-		width: 10em;
-		height: 4em;
-		font-size: 0.8em;
-	  }
-	  .headerbutton:hover {
-	  background-color: rgba(0, 0, 0, 0.8);
-	  }
-	  #travel {
-		background-color: #6ABBFF;
-		height: 70%;
-		
-	  }
-	  .travel {
-		position: relative;
-		width: 100%;
-		margin: 0 auto;
-		padding-top: 100px;
-		padding-bottom: 150px;
-	  }
-	  .travel img {
-		position: absolute;
-		width: 20%;
-		height: auto;
-		border-radius: 15px;
-	  }
-
-	  #travel1 {z-index: 1; margin-left: 5%;}
-	  #travel2 {z-index: 2; margin-left: 15%;}
-	  #travel3 {z-index: 3; margin-left: 25%;}
-	  #travel4 {z-index: 4; margin-left: 35%;}
-	  #travel5 {z-index: 5; margin-left: 45%;}
-	  #travel6 {z-index: 6; margin-left: 55%;}
-	  #travel7 {z-index: 7; margin-left: 65%;}
-	  #travel8 {z-index: 8; margin-left: 75%;}
-	 
-	  .travel a :hover {
-	  box-shadow : 1px 1px 1px black,
-				   0 0 10px pink,
-				   0 0 5px magenta;
-		z-index: 15 !important;
-	    width: 25%;
-	   height: auto;
-	  }
-	  
-	  #activity {
-	    height: 80%;
-	  }
-	  .activity {
-		margin: 0 auto;
-		width: 100%;
-		padding-top: 100px;
-		padding-bottom: 150px;
-	  }
-	  #actfirst{
-		margin-left: 4%;
-	  }
-
-	  .activity-center {
-		float: left;
-		width: 23%;
-		text-align: center;
-	  }
-	  .activity-center img {
-		width: 90%;
-		height: auto;
-		border-radius: 15px;
-		margin: 0 auto;
-	 } 
-	 .activity-center:hover img {
-		box-shadow : 1px 1px 1px black,
-					 0 0 10px pink,
-					 0 0 5px magenta;
-	  }
-	  .activity-center h3 {
-		font-family: "Helvetica";
-		height: 0.7em;
-		margin-bottom: 0px;
-		text-decoration: none;
-	  }
-
-	  #coding {
-		background-color: #353535;
-		color: white;
-		height: 80%;
-	  }
-	  .coding {
-		margin: 0 auto;
-		width: 100%;
-		padding-top: 100px;
-		padding-bottom: 150px;
-	  }
-	  #codefirst {
-		margin-left: 10%;
-	  }
-	  .coding-center {
-		float: left;
-		width: 20%;
-		text-align: center;
-	  }
-	  .coding-center img {
-		width: 90%;
-		height : auto;
-		margin: 0 auto;
-		border-radius: 50px;
-	  }
-	 .coding-center:hover img {
-		box-shadow : 3px 3px 3px white,
-					 0 0 30px white,
-					 0 0 15px white;
-	  }
-	
-	#language {
-	  height: 80%;
-	}
-	.jlpt {
-		margin: 0 auto;
-		width: 100%;
-		padding-top: 100px;
-		padding-bottom: 150px;
-	  }
-	  #jlptfirst {
-		margin-left: 5%;
-	  }
-	  .jlpt-center {
-		float: left;
-		width: 22.5%;
-		text-align: center;
-	  }
-	  .jlpt-center img {
-		width: 90%;
-		height : auto;
-		margin: 0 auto;
-		border-radius: 50px;
-	  }
-	 .jlpt-center:hover img {
-		box-shadow : 1px 1px 1px black,
-					 0 0 15px black,
-					 0 0 10px black;
-	  }
-
-	  .footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	  }
-	  .footer-center {
-		margin: 0 auto;
-		text-align: center;
-	  }
-	  .footer-center img {
-		width: 40px;
-		height: auto;
-	  }
-	  .footer-center a {
-		text-decoration: none;
-	  }
-	  .text-muted {
-		font-size: 1.5em;
-		color: #777;
-	  }
-	</style>
+  <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
   <!-- Nav -->
-  
+
   <!-- Header -->
   <header id="top" class="header">
 	<div class="text-vertical-center">
