--- a/codelink/html.html
+++ b/codelink/html.html
@@ -3,100 +3,7 @@
   <head>
 	<meta charset="utf-8">
 	<title> HTML & CSS </title>
-	<style>
-	html, body {
-	  margin: 0px;
-	  width: 100%;
-	  height: 100%;
-	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	}
-	a:link {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:visited {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:hover {
-	  text-decoration: underline;
-	}
-	.header {
-	  margin: 0px;
-	  display: table;
-	  width: 100%;
-	  height: 10%;
-	  background-color: #353535;
-	  background-size: 100%;
-	}
-	.header-main h1 {
-	  color: white;
-	  margin-left: 10%;
-	  font-size: 5em;
-	  vertical-align: middle;
-	}
-	
-	.nav {
-	  margin-top: 0.5em;
-	  margin-right: 2em;
-	  font-size: 1.5em;
-	  text-align: right;
-	}
-	#main {
-	  width: 100%;
-	  height: 70%;
-	}
-	.main {
-	  width: 80%;
-	  height: 60%;
-	  margin-left: 15%;
-	}
-	#main p {
-	  font-size: 3em;
-	  text-align: left;
-	  vertical-align: middle;
-	  margin-left: 10%;
-	}
-	.object {
-	  float: left;
-	  width: 200px;
-	  height: 150px;
-	  text-align: center;
-	  vertical-align: middle;
-	}
-	.object a:link {
-	  color: black;
-	  text-decoration: none;
-	}
-	.object a:visited {
-	  color: black;
-	  text-decoration: none;
-	}
-	#footer {
-	  width: 100%;
-	}
-	.footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	 }
-	 .footer-center {
-	   margin: 0 auto;
-	   text-align: center;
-	 }
-	 .footer-center img {
-	   width: 40px;
-	   height: auto;
-	 }
-	 .footer-center a {
-	   text-decoration: none;
-	 }
-	 .text-muted {
-	   font-size: 1.5em;
-	   color: #777;
-	 }
-	</style>
+  <link rel="stylesheet" type="text/css" href="code.css"/>
   </head>
   <body>
 	<header class="header">
@@ -110,7 +17,7 @@
 		<h1><strong>HTML & CSS</strong></h1>
 	  </div>
 	</header>
-	
+
 	<!-- main section -->
 	<section id="main">
 	  <p>목록</p>
