--- a/codelink/ruby5.html
+++ b/codelink/ruby5.html
@@ -3,85 +3,7 @@
   <head>
 	<meta charset="utf-8">
 	<title> RoR_MVC </title>
-	<style>
-	html, body {
-	  margin: 0px;
-	  width: 100%;
-	  height: 100%;
-	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	}
-	a:link{
-	  color: white;
-	  text-decoration: none;
-	}
-	a:visited {
-	  color: white;
-	  text-decoration: none;
-	}
-	.nav a:hover {
-	  text-decoration: underline;
-	}
-	.header {
-	  margin: 0px;
-	  display: table;
-	  width: 100%;
-	  height: 10%;
-	  background-color: #353535;
-	  background-size: 100%;
-	}
-	.header-main h1 {
-	  color: white;
-	  margin-left: 10%;
-	  font-size: 5em;
-	  vertical-align: middle;
-	}
-	
-	.nav {
-	  margin-top: 0.5em;
-	  margin-right: 2em;
-	  font-size: 1.5em;
-	  text-align: right;
-	}
-	#main {
-	  width: 100%;
-	  height: auto;
-	  margin-bottom: 5%;
-	}
-	.main {
-	  width: 80%;
-	  margin-left: 15%;
-	}
-	#main p {
-	  font-size: 3em;
-	  text-align: left;
-	  vertical-align: middle;
-	  margin-left: 10%;
-	}
-	#footer {
-	  width: 100%;
-	}
-	.footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	 }
-	 .footer-center {
-	   margin: 0 auto;
-	   text-align: center;
-	 }
-	 .footer-center img {
-	   width: 40px;
-	   height: auto;
-	 }
-	 .footer-center a {
-	   text-decoration: none;
-	 }
-	 .text-muted {
-	   font-size: 1.5em;
-	   color: #777;
-	 }
-	</style>
+  <link rel="stylesheet" type="text/css" href="code.css"/>
   </head>
   <body>
 	<header class="header">
@@ -95,13 +17,13 @@
 		<a href="ruby.html"><h1><strong>Ruby on Rails</strong></h1></a>
 	  </div>
 	</header>
-	
+
 	<!-- main section -->
 	<section id="main">
 	  <p>MVC</p>
 	  <div class="main">
 		<h2>MVC란 Model  View  Controller를 일컫는 말로<br><br>소프트웨어의 디자인 패턴이다.<br><h2>
-		<img src="../public/mvc.png" width="65%">	
+		<img src="../public/mvc.png" width="65%" height="auto">
 	  </div>
 	</section>
 
