--- a/japanese/alphabet.html
+++ b/japanese/alphabet.html
@@ -3,49 +3,21 @@
   <head>
 	<meta charset="utf-8">
 	<title> 50음도 </title>
+  <link rel="stylesheet" type="text/css" href="japanese.css"/>
 	<style>
-	html, body {
-	  margin: 0px;
-	  width: 100%;
-	  height: 100%;
-	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  table {
+	  border: 3px solid black;
+	  border-collapse: collapse;
+	  width: 85%;
+	  height: 50%;
+	  text-align: center;
+	  padding: 0px;
 	}
-	a:link {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:visited {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:hover {
-	  text-decoration: none;
-	}
-	.header {
-	  margin: 0px;
-	  display: table;
-	  width: 100%;
-	  height: 10%;
-	  background-color: #353535;
-	  background-size: 100%;
-	}
-	.header-main h1 {
-	  color: white;
-	  margin-left: 10%;
-	  font-size: 5em;
-	  vertical-align: middle;
-	}
-	
-	.nav {
-	  margin-top: 0.5em;
-	  margin-right: 2em;
-	  font-size: 1.5em;
-	  text-align: right;
-	}
-	#main {
-	  width: 100%;
-	  height: auto%;
-	}
+	tr td {
+	  border: 1px solid black;
+  }
+
+
 	.hira {
 	  width: 80%;
 	  margin-left: 15%;
@@ -57,62 +29,15 @@
 	  margin-left: 15%;
 	  margin-bottom: 5%;
 	}
-	#main p {
-	  font-size: 3em;
-	  text-align: left;
-	  vertical-align: middle;
-	  margin-left: 10%;
-	}
-
-	.body {
-	  height: 5%;
-	}
-
-	table {
-	  border: 3px solid black;
-	  border-collapse: collapse;
-	  width: 85%;
-	  height: 50%;
-	  text-align: center;
-	  padding: 0px;
-	}
-	tr td {
-	  border: 1px solid black;
-	}
-	.kana {
-	  font-size: 3em;
-	  height: 15%;
-	}
-	.sound {
-	  font-size: 1em;
-	  vertical-align: center;
-	  height: 5%;
-	}
-
-	#footer {
-	  width: 100%;
-	}
-	.footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	 }
-	 .footer-center {
-	   margin: 0 auto;
-	   text-align: center;
-	 }
-	 .footer-center img {
-	   width: 40px;
-	   height: auto;
-	 }
-	 .footer-center a {
-	   text-decoration: none;
-	 }
-	 .text-muted {
-	   font-size: 1.5em;
-	   color: #777;
-	 }
+  .kana {
+    font-size: 3em;
+    height: 15%;
+  }
+  .sound {
+    font-size: 1em;
+    vertical-align: center;
+    height: 5%;
+  }
 	</style>
   </head>
   <body>
@@ -127,7 +52,7 @@
 		  <a href="jlpt/html"><h1><strong>가나</a></strong></h1>
 	  </div>
 	</header>
-	
+
 	<!-- main section -->
 	<section id="main">
 	  <p>50음도</p>
