--- a/japanese/video.html
+++ b/japanese/video.html
@@ -3,55 +3,8 @@
   <head>
 	<meta charset="utf-8">
 	<title> 추천영화 </title>
+  <link rel="stylesheet" type="text/css" href="japanese.css"/>
 	<style>
-	html, body {
-	  margin: 0px;
-	  width: 100%;
-	  height: 100%;
-	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	}
-	a:link {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:visited {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:hover {
-	  text-decoration: none;
-	}
-	.header {
-	  margin: 0px;
-	  display: table;
-	  width: 100%;
-	  height: 10%;
-	  background-color: #353535;
-	  background-size: 100%;
-	}
-	.header-main h1 {
-	  color: white;
-	  margin-left: 10%;
-	  font-size: 5em;
-	  vertical-align: middle;
-	}
-	
-	.nav {
-	  margin-top: 0.5em;
-	  margin-right: 2em;
-	  font-size: 1.5em;
-	  text-align: right;
-	}
-	#main {
-	  width: 100%;
-	  height: auto;
-	}
-	#main p {
-	  font-size: 3em;
-	  text-align: left;
-	  vertical-align: middle;
-	  margin-left: 10%;
-	}
 	.movie {
 	  width: 80%;
 	  overflow: auto;
@@ -79,31 +32,6 @@
 	.object h3 {
 	  height: 1em;
 	}
-		
-	#footer {
-	  width: 100%;
-	}
-	.footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	 }
-	 .footer-center {
-	   margin: 0 auto;
-	   text-align: center;
-	 }
-	 .footer-center img {
-	   width: 40px;
-	   height: auto;
-	 }
-	 .footer-center a {
-	   text-decoration: none;
-	 }
-	 .text-muted {
-	   font-size: 1.5em;
-	   color: #777;
-	 }
 	</style>
   </head>
   <body>
@@ -118,7 +46,7 @@
 		  <a href="jlpt.html"><h1><strong>영화</a></strong></h1>
 	  </div>
 	</header>
-	
+
 	<!-- main section -->
 	<section id="main">
 	<div>
@@ -140,8 +68,8 @@
 		  <img src="../public/chihaya.jpg"><br><br><h3>ちはやふる</h3>
 		</div>
 	  </div>
-	  </div>	
-	  <div>	
+	  </div>
+	  <div>
 	   <p>드라마</p>
 	  <div class="drama">
 		<div class="object">
