--- a/japanese/word.html
+++ b/japanese/word.html
@@ -3,58 +3,11 @@
   <head>
 	<meta charset="utf-8">
 	<title> 단어장 </title>
+  <link rel="stylesheet" type="text/css" href="japanese.css"/>
 	<style>
-	html, body {
-	  margin: 0px;
-	  width: 100%;
-	  height: 100%;
-	  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	}
-	a:link {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:visited {
-	  color: white;
-	  text-decoration: none;
-	}
-	a:hover {
-	  text-decoration: none;
-	}
-	.header {
-	  margin: 0px;
-	  display: table;
-	  width: 100%;
-	  height: 10%;
-	  background-color: #353535;
-	  background-size: 100%;
-	}
-	.header-main h1 {
-	  color: white;
-	  margin-left: 10%;
-	  font-size: 5em;
-	  vertical-align: middle;
-	}
-	
-	.nav {
-	  margin-top: 0.5em;
-	  margin-right: 2em;
-	  font-size: 1.5em;
-	  text-align: right;
-	}
-	#main {
-	  width: 100%;
-	  height: auto;
-	}
 	.main {
 	  width: 80%;
 	  margin-left: 15%;
-	}
-	#main p {
-	  font-size: 3em;
-	  text-align: left;
-	  vertical-align: middle;
-	  margin-left: 10%;
 	}
 	table {
 	  margin-right: 10%;
@@ -68,41 +21,16 @@
 	  padding: 10px;
 	  height: 5%;
 	}
-	.table tr:nth-child(2n-1) {
+	table tr:nth-child(2n-1) {
 	  font-size: 1.5em;
 	}
-	.table tr:nth-child(2n) {
+	table tr:nth-child(2n) {
 	  font-size: 1em;
 	  color: white;
 	}
 	table :nth-child(2n) :hover {
 	  color: red;
 	}
-		
-	#footer {
-	  width: 100%;
-	}
-	.footer {
-		padding-right:15px;
-		padding-left:15px;
-		margin-right: auto;
-		margin-left: auto;
-	 }
-	 .footer-center {
-	   margin: 0 auto;
-	   text-align: center;
-	 }
-	 .footer-center img {
-	   width: 40px;
-	   height: auto;
-	 }
-	 .footer-center a {
-	   text-decoration: none;
-	 }
-	 .text-muted {
-	   font-size: 1.5em;
-	   color: #777;
-	 }
 	</style>
   </head>
   <body>
@@ -117,12 +45,12 @@
 		  <a href="jlpt.html"><h1><strong>단어장</a></strong></h1>
 	  </div>
 	</header>
-	
+
 	<!-- main section -->
 	<section id="main">
 	  <p>단어장</p>
 	  <div class="main">
-		<table class="table">
+		<table>
 		  <tr>
 			<td>合う</td><td>あとで</td><td>1回</td><td>美味い</td><td>青い</td><td>危ない</td><td>5日</td><td>生まれる</td><td>赤い</td><td>甘い</td>
 		  </tr>
@@ -138,7 +66,7 @@
 		  <tr>
 			<td>あげる</td><td>洗う</td><td>嫌だ</td><td>駅</td><td>浅い</td><td>良い</td><td>入り口</td><td>美味しい</td><td>朝ごはん</td><td>言う</td>
 		  </tr>
-		  <tr>	
+		  <tr>
 			<td>올리다</td><td>씻다</td><td>싫다</td><td>역</td><td>얕다</td><td>좋다</td><td>입구</td><td>맛있다</td><td>아침밥</td><td>말하다</td>
 		  </tr>
 		  <tr>
