--- a/japanese/video.html
+++ b/japanese/video.html
@@ -43,7 +43,7 @@
 		  <a href="word.html">단어장&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		  <a href="jlpt.html"><h1><strong>영화</a></strong></h1>
+		  <h1><strong>영화</strong></h1>
 	  </div>
 	</header>
 
