--- a/japanese/word.html
+++ b/japanese/word.html
@@ -42,7 +42,7 @@
 		  <a href="video.html">영화&nbsp;&nbsp;</a>
 		  <a href="https://www.jlpt.or.kr/index.html">JLPT홈</a>
 		</nav>
-		  <a href="jlpt.html"><h1><strong>단어장</a></strong></h1>
+		  <h1><strong>단어</strong></h1>
 	  </div>
 	</header>
 
